Refactor in different modules finished. TODO: Merge with master