@@ -221,194 +221,20 @@
         <reuseForks>false</reuseForks>
                 </configuration>
             </plugin>
-            <plugin>
+            <!--<plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.stratio.connector.sparksql.SparkSQLConnector</mainClass>
+                            <mainClass>com.stratio.connector.sparksql.injector.providerConfig.SparkSQLConnector</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                 </configuration>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
-    <profiles>
-        <profile>
-            <id>package</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>appassembler-maven-plugin</artifactId>
-                        <version>1.10</version>
-                        <executions>
-                            <execution>
-                                <id>appassembler</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>assemble</goal>
-                                </goals>
-                                <configuration>
-                                    <configurationSourceDirectory>src/main/config</configurationSourceDirectory>
-                                    <configurationDirectory>conf</configurationDirectory>
-                                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
-                                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
-                                    <assembleDirectory>${project.build.directory}/stratio-connector-sparkSQL</assembleDirectory>
-                                    <extraJvmArguments>$CONNECTOR_SPARKSQL_OPTS -Djava.net.preferIPv4Stack=true -Dcom.sun.management.jmxremote.port=${jmx.port} -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -DXmx3072m -XX:MaxPermSize=512m</extraJvmArguments>
-                                    <filterConfigurationDirectory>true</filterConfigurationDirectory>
-                                    <platforms>
-                                        <platform>windows</platform>
-                                        <platform>unix</platform>
-                                    </platforms>
-                                    <programs>
-                                        <program>
-                                            <mainClass>com.stratio.connector.sparksql.SparkSQLConnector</mainClass>
-                                            <id>stratio-connector-sparkSQL</id>
-                                        </program>
-                                    </programs>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>com.stratio.mojo.unix</groupId>
-                        <artifactId>unix-maven-plugin</artifactId>
-                        <version>1.1.5</version>
-                        <extensions>true</extensions>
-                        <inherited>false</inherited>
-                        <configuration>
-                            <size>1</size>
-                            <outputFileName>stratio-connector-sparkSQL</outputFileName>
-                            <contact><![CDATA[Stratio <jmgomez@stratio.com>]]></contact>
-                            <contactEmail>jmgomez@stratio.com</contactEmail>
-                            <deb>
-                                <section>devel</section>
-                            </deb>
-                            <rpm>
-                                <group>stratio</group>
-                                <requires>bash</requires>
-                            </rpm>
-                            <name>connector-sparkSQL</name>
-                            <excludeDirectoryAttributes>
-                                <dir>/etc</dir>
-                                <dir>/etc/init.d</dir>
-                                <dir>/etc/default</dir>
-                                <dir>/var</dir>
-                                <dir>/opt</dir>
-                                <dir>/usr</dir>
-                                <dir>/bin</dir>
-                            </excludeDirectoryAttributes>
-                            <assembly>
-                                <copyFile>
-                                    <path>src/main/unix/files_and_dirs/etc/init.d/connector-sparkSQL</path>
-                                    <toFile>/etc/init.d/connector-sparkSQL</toFile>
-                                    <attributes>
-                                        <user>stratio</user>
-                                        <group>stratio</group>
-                                        <mode>644</mode>
-                                    </attributes>
-                                </copyFile>
-                                <mkdirs>
-                                    <path>/opt/sds/connector-sparkSQL</path>
-                                    <attributes>
-                                        <user>stratio</user>
-                                        <group>stratio</group>
-                                    </attributes>
-                                </mkdirs>
-                                <mkdirs>
-                                    <path>/var/run/sds</path>
-                                    <attributes>
-                                        <user>stratio</user>
-                                        <group>stratio</group>
-                                    </attributes>
-                                </mkdirs>
-                                <copyDirectory>
-                                    <from>target/stratio-connector-sparkSQL/bin</from>
-                                    <to>/opt/sds/stratio-connector-sparkSQL/bin</to>
-                                    <directoryAttributes>
-                                        <user>stratio</user>
-                                        <group>stratio</group>
-                                    </directoryAttributes>
-                                </copyDirectory>
-                                <copyDirectory>
-                                    <from>target/stratio-connector-sparkSQL/repo</from>
-                                    <to>/opt/sds/stratio-connector-sparkSQL/repo</to>
-                                    <directoryAttributes>
-                                        <user>stratio</user>
-                                        <group>stratio</group>
-                                    </directoryAttributes>
-                                </copyDirectory>
-                                <copyDirectory>
-                                    <from>target/stratio-connector-sparkSQL/conf</from>
-                                    <to>/opt/sds/stratio-connector-sparkSQL/conf</to>
-                                    <directoryAttributes>
-                                        <user>stratio</user>
-                                        <group>stratio</group>
-                                    </directoryAttributes>
-                                </copyDirectory>
-                                <copyDirectory>
-                                    <from>src/main/template</from>
-                                    <to>/opt/sds/stratio-connector-sparkSQL/template</to>
-                                    <directoryAttributes>
-                                        <user>stratio</user>
-                                        <group>stratio</group>
-                                    </directoryAttributes>
-                                </copyDirectory>
-                                <copyDirectory>
-                                    <from>src/main/unix/files_and_dirs/etc/default</from>
-                                    <to>/etc/default</to>
-                                    <directoryAttributes>
-                                        <user>stratio</user>
-                                        <group>stratio</group>
-                                    </directoryAttributes>
-                                </copyDirectory>
-                                <copyFile>
-                                    <path>src/main/include/LICENSE</path>
-                                    <toFile>/opt/sds/stratio-connector-sparkSQL/LICENSE</toFile>
-                                </copyFile>
-                                <copyFile>
-                                    <path>src/main/include/NOTICE</path>
-                                    <toFile>/opt/sds/stratio-connector-sparkSQL/NOTICE</toFile>
-                                </copyFile>
-                            </assembly>
-                            <defaults>
-                                <directoryAttributes>
-                                    <mode>0755</mode>
-                                </directoryAttributes>
-                                <fileAttributes>
-                                    <mode>0644</mode>
-                                </fileAttributes>
-                            </defaults>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>deb</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>package-deb</goal>
-                                </goals>
-                                <configuration>
-                                    <architecture>all</architecture>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>rpm</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>package-rpm</goal>
-                                </goals>
-                                <configuration>
-                                    <architecture>noarch</architecture>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+
 </project>
